[package]
name = "sea_tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = { version = "1.2.0", optional = true, features = ["xkb"]}
xkbcommon = { version = "0.5.0", optional = true, features = ["x11"]}
phf = { version = "0.11.0", optional = true, features = ["macros"]}
nix = { version="0.25.0", optional = true, features=["term","signal","poll"]}
[features]
t = ["dep:xcb","dep:xkbcommon","dep:phf","dep:nix"]